# proditec

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_SCRAPER.md  avamec_scraper.py  buscar_imagem.py  compare_pending.py  consolidate_logs.py  cursistas_grupo4_turmab.csv  docker-compose.yml  download_sheet_oauth.py  inspect_sheet.py  inspect_tab.py  login_failed_source.html  presencialidade.py  pyproject.toml  relatorio_divergencias_nomes.txt  relatorio_ortografia_nomes.txt  requirements.txt  test_parser.py  verify_drive.py
bot_whatsapp/: README.md  bot.py  check_delivered.py  contacts_example.csv  delivered_report_20251211_163646.csv  generate_report.py  main.py  messages.json  requirements.txt
confirmacao_matricula/: README.md  verify_sheets.py
data/: avamec_cookies.json  avamec_cookies.txt  avamec_turma_b_completo.json  comparacao_status.csv  google_cookies.txt  grades_consolidados.csv  links_notas.txt  login_failed_source.html  performance_data.xlsx  processed_data.csv  relatorio_notas_faltantes.txt  test_sheet.csv  test_sheet_ua.csv  turma_b_extracted.json
docs/: scrape_avamec_completo.md  scrape_avamec_status.md
locales/: en.json  pt_BR.json
meet/: config.py  google_integration.py  list_guests.py
scripts/: check_drive_access.py  check_names_discrepancy.py  check_type.py  comparacao_status.py  compare_avamec_status.py  compare_status_changes.py  compare_turma_b.py  download_sheet.py  download_sheets.py  download_sheets_selenium.py  download_xlsx.py  inspect_comparison.py  inspect_tab.py  inspect_xlsx.py  schedule_cron.py  (+7 more)
(+19 files in other folders)
