[project]
name = "avamec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyautogui>=0.9.54",
    "webdriver-manager>=4.0.2",
    "selenium>=4.0.0",
    "streamlit>=1.0.0",
    "plotly>=5.0.0",
    "requests>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-apps-meet>=0.0.1",
    "google-api-python-client>=2.0.0",
]
